--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,117 @@
-# Compiled class file
-*.class
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# Log file
-*.log
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+*.ids
+*.orig
 
-# BlueJ files
-*.ctxt
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### Eclipse ###
+*.pydevproject
+.metadata
+tmp/
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+/src/main/resources/rebel.xml
 
-# Package Files #
+### VS Code ###
+.vscode/
+
+### Project Specific ###
+/build/www/**
+/src/test/javascript/coverage/
+/src/test/javascript/PhantomJS*/
+
+### Node ###
+/node/
+node_tmp/
+node_modules/
+npm-debug.log.*
+
+### SAAS ###
+.sass-cache/
+
+### External tool builders ###
+.externalToolBuilders/**
+
+### Locally stored "Eclipse launch configurations" ###
+*.launch
+
+### CDT-specific ###
+.cproject
+
+### Maven ###
+/log/
+/target/
+!.mvn/wrapper/maven-wrapper.jar
+
+### Gradle ###
+.gradle/
+/build/
+!gradle/wrapper/gradle-wrapper.jar
+
+### Package Files ###
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+*.db
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+### Windows ###
+Thumbs.db
+Desktop.ini
+
+### Mac OSX ###
+.DS_Store
+.svn
+
+### Thumbnails ###
+._*
+
+### Files that might appear on external disk ###
+.Spotlight-V100
+.Trashes
+
+### Directories ###
+/bin/
+/deploy/
+target/
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### Logs ###
+*.log
+
+### Others ###
+HELP.md
+*.class
+*.*~
+*~
+.merge_file*
+
+### ESLint ###
+.eslintcache
